--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,3 +42,12 @@ jobs:
       - run:
           name: Build of Docker image
           command: ./build.sh DEV
+
+      # Deployment.
+      - run:
+          name: Installing AWS client
+          command: |
+            apk add --no-cache jq py-pip sudo
+            sudo pip install awscli --upgrade
+      - deploy:
+          command: ./deploy.sh DEV $CIRCLE_SHA1
