--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,10 @@ jobs:
       - run:
           name: Installing AWS client
           command: |
-            sudo apt install jq
-            sudo apt install awscli
+            sudo apt-get install python-pip python-dev build-essential 
+            sudo pip install --upgrade pip 
+            sudo pip install --upgrade virtualenv
+            sudo apt install jq            
             pip install --upgrade awscli
       - deploy:
           command: ./deploy.sh DEV $CIRCLE_SHA1
