--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,8 @@ jobs:
       # Deployment.
       - run:
           name: Installing AWS client
-          command: |            
-            sudo pip install awscli --upgrade
+          command: |
+            sudo apt install jq
+            sudo apt install awscli --upgrade
       - deploy:
           command: ./deploy.sh DEV $CIRCLE_SHA1
